# django-pdf-flipbook

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
django-pdf-flipbook/: __init__.py  admin.py  urls.py
django-pdf-flipbook/static/flipbook/dflip/: README.md
django-pdf-flipbook/templates/: index.html  viewer.html
flipbook/: __init__.py  admin.py  apps.py  blocks.py  cms_apps.py  cms_plugins.py  models.py  urls.py  views.py  wagtail_hooks.py
flipbook/static/flipbook/css/: flipbook_overrides.css
flipbook/static/flipbook/dflip/: README.md
flipbook/static/flipbook/pdfjs-flipbook/web/: viewer.js
flipbook/templates/: index-dflip.html  index.html
flipbook/templates/flipbook/: _collection_grid.html  base.html  index-dflip.html  index.html
flipbook/templates/flipbook/admin/: thumbnail_cell.html
flipbook/templates/flipbook/blocks/: flipbook_collection_block.html
flipbook/templates/flipbook/cms_plugins/: flipbook_collection.html
flipbook/templatetags/: flipbook_tags.py
